# Vault

./: LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.vue  i18n.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  crypto.rs  errors.rs  lib.rs  models.rs  storage.rs  vault.rs
src/assets/: main.css
src/components/: AppSidebar.vue  ConfirmDialog.vue  EntryDetail.vue  EntryForm.vue  EntryList.vue  TopBar.vue
src/composables/: useLocale.ts
src/locales/: en.json  zh-CN.json
src/stores/: vault.ts
src/types/: index.ts
src/views/: DashboardView.vue  UnlockView.vue
